--- a/isaw-papers-1/isaw-papers-1.xhtml
+++ b/isaw-papers-1/isaw-papers-1.xhtml
@@ -37,10 +37,16 @@
  <meta name="DCTERMS.license" content="Creative Commons Attribution 3.0 Unported (CC-BY)" />
  <meta name="DCTERMS.bibliographicCitation" content="Alexander Jones and John M. Steele. &quot;A New Discovery of a Component of Greek Astrology in Babylonian Tablets: The “Terms”.&quot; ISAW Papers 1 (2011)." />
  <meta name="DCTERMS.isPartOf" content="ISAW Papers" />
+
+
+
+ 
+  <meta name="DCTERMS.identifier.DOI" content="2333.1/k98sf96r"/>
+
  <link rel="dcterms:isPartOf" href="http://www.worldcat.org/oclc/756047783" />
  <link rel="dcterms:isPartOf" href="urn:issn:2164-1471" />
  <link rel="dcterms:isPartOf" href="http://isaw.nyu.edu/publications/isaw-papers" />
- <link rel="dcterms:hasVersion" href="http://doi.org/2333.1/k98sf96r"/>
+
 
  <link rel="stylesheet" href="isaw-papers.css" />
 
@@ -94,7 +100,7 @@
   and <span property="dcterms:creator cc:attributionName">John M. Steele</span><a class="endnotereference" href="#endnote2" id="endnoteref2" ><sup>2</sup></a>
  </h1>
  
- <div id="doi"><a property="dcterms:identifier" href="http://doi.org/2333.1/k98sf96r">http://doi.org/2333.1/k98sf96r</a></div>
+ <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/k98sf96r">http://doi.org/2333.1/k98sf96r</a></p>
  
  <div id="abstract"><em>Abstract:</em> <span>Two cuneiform astrological tablets in the British Museum provide the first evidence for Babylonian knowledge of the so-called &quot;doctrine of the Terms&quot; of Greco-Roman astrology (BM 36326 and BM 36628+36817+37197). Greek, Latin, and Egyptian astrological sources for the various systems of Terms and their origin are reviewed, followed by preliminary editions and translations of the relevant sections of the tablets. The system of Terms is shown to be so far the most technically complex component of Greek astrology to originate in Babylonia. Over the course of the Hellenistic period an Egyptian origin was ascribed to the systems of Terms as it was combined with components of Greek horoscopic astrology. By Ptolemy's day, this spurious history had largely displaced the true.</span></div>
  
