--- a/isaw-papers-12/isaw-papers-12.xhtml
+++ b/isaw-papers-12/isaw-papers-12.xhtml
@@ -33,13 +33,13 @@
  <meta name="DCTERMS.license" content="Creative Commons Attribution 4.0 Unported (CC-BY)" />
  <meta name="DCTERMS.bibliographicCitation" content="Dorian Greenbaum and Alexander Jones. 2017. 'P.Berl. 9825: An elaborate horoscope for 319 CE and its significance for Greek astronomical and astrological practice' ISAW Papers, 12." />
  <meta name="DCTERMS.isPartOf" content="ISAW Papers" />
+   <meta name="DCTERMS.identifier.DOI" content="2333.1/brv15m2n"/>
 
  <link rel="dcterms:isPartOf" href="http://www.worldcat.org/oclc/756047783" />
  <link rel="dcterms:isPartOf" href="urn:issn:2164-1471" />
  <link rel="dcterms:isPartOf" href="http://isaw.nyu.edu/publications/isaw-papers" />
 
 <link rel="stylesheet" href="isaw-publications.css"/>
-<link rel="dcterms:hasVersion" href="http://doi.org/2333.1/brv15m2n"/>
 <style scoped="scoped">
 
 .textparagraph {
@@ -77,6 +77,8 @@
  <p style="text-align:center">by</p>
  
  <h2><span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.org/viaf/44131920" property="foaf:name">Dorian Greenbaum</a></span> and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.org/viaf/66498387" property="foaf:name">Alexander Jones</a></span></h2>
+
+  <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/brv15m2n">http://doi.org/2333.1/brv15m2n</a></p>
  
  <p class="abstract"><em>Abstract: </em><span id="abstract" property="dcterms:abstract">The discovery of this elaborate horoscope in the Berlin papyrus collection is a milestone in the history of ancient horoscopes. The papyrus takes its place among very few such detailed horoscopes well preserved from antiquity. This paper discusses both the astronomical and astrological details of P.Berl. 9825, enumerating its contents and situating it within the broader historical and cultural context of astrological material from western antiquity. The first section outlines the physical details of the papyrus, its paleography, and the layout of the material among the different sections of the papyrus. It consists of seventeen columns spread among four framed sections. The beginning of the papyrus is lost, but enough remains to allow reconstruction of the date and time of the horoscope, in addition to the positions of the missing luminaries and planet (Saturn). A transcription and translation with apparatus and textual notes follow. A commentary in three parts follows the first section. Part 1 contains restorations, confirmations and corrections. This includes both a tabular summary of the data given in the horoscope, and a diagrammatic representation of the data. Part 2 consists of an astronomical commentary, comparing the astronomical data in the papyrus with Ptolemy’s Almagest and modern theory, to demonstrate that the horoscope was constructed using tables distinct from Ptolemy's, though of comparable quality. The commentary also includes analysis of solar and lunar data, planetary latitudes, and fixed stars “co-rising” with the longitudes of the relevant heavenly body. Part 3 is an astrological commentary. Comparisons with other elaborate horoscopes are made, in addition to analysis of the astrological techniques based on the data provided. Because this is the only extant example of a documentary horoscope containing all seven of the “planetary” lots of Paulus Alexandrinus, there is a more extensive discussion of the lots used here within their historical and cultural context.</span></p>
  
