--- a/isaw-papers-4/isaw-papers-4.xhtml
+++ b/isaw-papers-4/isaw-papers-4.xhtml
@@ -38,13 +38,13 @@
  <meta name="DCTERMS.license" content="Creative Commons Attribution 3.0 Unported (CC-BY)" />
  <meta name="DCTERMS.bibliographicCitation" content="Tony Freeth and Alexander Jones. 2012. The Cosmos in the Antikythera Mechanism. ISAW Papers, 4." />
  <meta name="DCTERMS.isPartOf" content="ISAW Papers" />
+   <meta name="DCTERMS.identifier.DOI" content="2333.1/xgxd26r7"/>
+
 
  <link rel="dcterms:isPartOf" href="http://www.worldcat.org/oclc/756047783" />
  <link rel="dcterms:isPartOf" href="urn:issn:2164-1471" />
  <link rel="dcterms:isPartOf" href="http://isaw.nyu.edu/publications/isaw-papers" />
-
-<link rel="dcterms:hasVersion" href="http://doi.org/2333.1/xgxd26r7" />
-
+ 
 <link rel="stylesheet" href="isaw-papers.css"/>
 
 </head>
@@ -60,6 +60,8 @@
 
 <h1><span property="dcterms:creator">Tony Freeth</span><sup><a class="endnoteref" id="endnoteref1" href="#endnote1">1</a></sup>
 and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.org/viaf/66498387">Alexander Jones</a></span><sup><a class="endnoteref" id="endnoteref2" href="#endnote2">2</a></sup></h1>
+
+ <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/xgxd26r7">http://doi.org/2333.1/xgxd26r7</a></p>
   
 <p id="abstract"><em>Abstract:</em> <span property="dcterms:abstract">The Antikythera Mechanism is a fragmentarily preserved Hellenistic astronomical machine with bronze gearwheels, made about the second century B.C. In 2005, new data were gathered leading to considerably enhanced knowledge of its functions and the inscriptions on its exterior. However, much of the front of the instrument has remained uncertain due to loss of evidence. We report progress in reading a passage of one inscription that appears to describe the front of the Mechanism as a representation of a Greek geocentric cosmology, portraying the stars, Sun, Moon, and all five planets known in antiquity. Complementing this, we propose a new mechanical reconstruction of planetary gearwork in the Mechanism, incorporating an economical design closely analogous to the previously identified lunar anomaly mechanism, and accounting for much unresolved physical evidence.</span></p>
   
