--- a/isaw-papers-5/isaw-papers-5.xhtml
+++ b/isaw-papers-5/isaw-papers-5.xhtml
@@ -7,9 +7,10 @@
  
 <head>
  <title>A. McCollum. (2012). “A Syriac Fragment from ‘The Cause of All Causes’ on the Pillars of Hercules.” ISAW Papers 5.</title>
+
+ <meta name="DCTERMS.identifier.DOI" content="2333.1/j9kd5302"/>
  <link rel="stylesheet" href="isaw-papers.css" />
  <link rel="dcterms:creator" href="http://viaf.org/viaf/96743024"/>
- <link rel="dcterms:hasVersion" href="http://doi.org/2333.1/j9kd5302" />
  <link rel="dcterms:isPartOf" resource="http://isaw.nyu.edu/publications/isaw-papers" />
 </head>
 <body>
@@ -19,6 +20,7 @@
  <h1 property="dcterms:title">A Syriac Fragment from <i>The Cause of All Causes</i> on the Pillars of Hercules</h1>
  <h1 property="dcterms:creator">Adam C. McCollum</h1>
 
+ <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/j9kd5302">http://doi.org/2333.1/j9kd5302</a></p>
 
  <div id="abstract"><em>Abstract:</em> <span>This brief note draws attention to a passage from the Syriac <i>Cause of All Causes</i> that describes the Pillars of Hercules, but as being three in number rather than two. The Syriac text in question has been well-known since it was published in 1889. This particular passage is studied and commented on here especially as it appears in a recently cataloged manuscript from Dayr Al-Za‘farān, in which the passage is completely divorced from its context in the <i>Cause of All Causes</i>.</span></div>
  
