--- a/isaw-papers-6/isaw-papers-6.xhtml
+++ b/isaw-papers-6/isaw-papers-6.xhtml
@@ -22,7 +22,7 @@
  <meta name="DCTERMS.isPartOf" content="ISAW Papers" />
  <meta name="DC.subject" content="Delos Island (Greece)" />
  <meta name="DC.subject" content="Economic history--To 500" />
- <link rel="dcterms:hasVersion" href="http://hdl.handle.net/2333.1/51c5b1dw" />
+ <meta name="DCTERMS.identifier.DOI" content="2333.1/51c5b1dw"/>
 </head>
 
 <body>
@@ -31,6 +31,8 @@
 <h1><span rel="dcterms:isPartOf" resource="http://isaw.nyu.edu/publications/isaw-papers">ISAW Papers</span> 6 (2013)</h1>
 <h1 property="dcterms:title">The Quartier du Stade on late Hellenistic Delos: <br/>a case study of rapid urbanization <br/>(fieldwork seasons 2009-2010)</h1>
 <h1><span property="dcterms:creator">Mantha Zarmakoupi</span></h1>
+
+ <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/51c5b1dw">http://doi.org/2333.1/51c5b1dw</a></p>
 <div id="abstract"><em>Abstract:</em> <span property="dcterms:abstract">This study examines recent archaeological evidence for the Quartier du Stade on Delos, which was newly formed after 167 CE. Analysis of the changes in the houses and the overall urban development of this neighborhood contribute to revealing the forces that shaped the city of Delos in this period, such as economy, politics, and ideology.</span></div>
   
  
