--- a/isaw-papers-8/isaw-papers-8.xhtml
+++ b/isaw-papers-8/isaw-papers-8.xhtml
@@ -20,6 +20,7 @@
  <meta name="DCTERMS.isPartOf" content="ISAW Papers" />
  <meta name="DC.subject" content="India--Relations--Rome, Ivory industry" />
  <meta name="DC.subject" content="Economic history--to 500" />
+   <meta name="DCTERMS.identifier.DOI" content="2333.1/p5hqc1c7"/>
 
 </head>
 <body>
@@ -28,7 +29,7 @@
 <h2>ISAW Papers 8 (2014)</h2>
 <h1 property="dcterms:title">Ivory from Muziris<sup><a id="footnote-reference-asterix" href="#footnote-asterix">*</a></sup></h1>
 <h2><span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.org/viaf/92821505" property="foaf:name">Federico De Romanis</a></span></h2>
-<p class="handle"><a rel="bibo:identifier" href="http://doi.org/2333.1/p5hqc1c7">http://hdl.handle.net/2333.1/p5hqc1c7</a></p>
+ <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/p5hqc1c7">http://doi.org/2333.1/p5hqc1c7</a></p>
 <p id="abstract"><em>Abstract:</em><span property="dcterms:abstract"> The extant portion of the verso side of the “Muziris papyrus” (PVindob G 40822 v = SB XVIII 13617 v) contains the monetary evaluation of three-quarters of an Indian cargo loaded on the ship <i>Hermapollon</i>. Among the commodities are 167 elephant tusks weighing 3,228.5 kgs and <i>schidai</i> weighing 538.5 kgs. It is argued that <i>schidai</i> are fragments of tusks trimmed away from captive elephants. A comparison with commercial ivory lots of the early sixteenth century shows the selected quality of the tusks loaded on the <i>Hermapollon</i>.</span></p>
 <p class="subjects"><em>Subjects:</em> India--Relations--Rome, <a href="http://id.loc.gov/authorities/subjects/sh87002521">Ivory industry</a>, <a href="http://id.loc.gov/authorities/subjects/sh85040818">Economic history--to 500</a>.</p> 
 </header>
