adding the missing doi

--- a/isaw-papers-11/isaw-papers-11.xhtml
+++ b/isaw-papers-11/isaw-papers-11.xhtml
@@ -22,6 +22,7 @@
  <meta name="DCTERMS.bibliographicCitation" content="C. Carman and M. Di Cocco. (2016). The moon phase anomaly in the Antikythera Mechanism. ISAW Papers, 11." />
  <meta name="DCTERMS.license" content="Creative Commons Attribution 4.0 Unported (CC-BY)" />
  <meta name="DCTERMS.isPartOf" content="ISAW Papers" />
+ <meta name="DCTERMS.identifier.DOI" content="2333.1/3ffbgd1v"/>
 
  <link rel="dcterms:isPartOf" href="http://www.worldcat.org/oclc/756047783" />
  <link rel="dcterms:isPartOf" href="urn:issn:2164-1471" />
@@ -41,6 +42,8 @@
 	
 	<h2><span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.org/viaf/81834215" property="foaf:name">Christián C. Carman</a></span> and <span property="dcterms:creator">Marcelo Di Cocco</span>
 	</h2>
+
+	  <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/3ffbgd1v">http://doi.org/2333.1/3ffbgd1v</a></p>
 	
 	
 	<p class="abstract"><em>Abstract:</em><span id="abstract" property="dcterms:abstract"> The Antikythera Mechanism is a mechanical astronomical instrument that was discovered in an ancient shipwreck at the beginning of the twentieth century, made about the second century B.C. It had several pointers showing the positions of the moon and sun in the zodiac, the approximate date according to a lunisolar calendar, several subsidiary dials showing calendrical phenomena, and also predictions of eclipses. The mechanism also had a display of the Moon’s phases: a small ball, half pale and half dark, rotating with the lunar synodic period and so showing the phases of the moon. The remains of the moon phase display include a fragmentary contrate gear. According to the reconstruction offered by Michael Wright, this gear is now pointing unintentionally in the wrong direction. In this paper we offer for the first time a detailed description of the remains of the moon phase mechanism. Based on this evidence, we argue that the extant contrate gear direction is the originally intended one, and we offer a conjectural explanation for its direction as an essential part of a representation of Aristarchus’s hypothesis that half moon phase is observably displaced from exact quadrature.</span></p>
