--- a/isaw-papers-7/isaw-papers-7.xhtml
+++ b/isaw-papers-7/isaw-papers-7.xhtml
@@ -21,6 +21,8 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
  <title>Current Practice in Linked Open Data for the Ancient World</title>
+
+ <meta name="DCTERMS.identifier.DOI" content="2333.1/gxd256w7"/>
  <link rel="stylesheet" href="isaw-papers-7.css" />
  <link rel="canonical" href="http://dlib.nyu.edu/awdl/isaw/isaw-papers/7/" />
  <link rel="dcterms:isPartOf" href="http://isaw.nyu.edu/publications/isaw-papers" />
@@ -32,6 +34,8 @@
  <h1 property="dcterms:title">Current Practice in Linked Open Data for the Ancient World</h1>
   
  <h1>Editors: <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.org/viaf/258676042" property="foaf:name">Thomas Elliott</a></span>, <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.org/viaf/220831018" property="foaf:name">Sebastian Heath</a></span>, <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.org/viaf/309849093" property="foaf:name">John Muccigrosso</a></span></h1>
+
+ <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/gxd256w7">http://doi.org/2333.1/gxd256w7</a></p>
   
  <div id="abstract"><em>Abstract:</em> Reports on current work relevant to the role of Linked Open Data (LOD) in the study of the ancient world. As a term, LOD encompasses approaches to the publication of digital resources that emphasize stability, relatively fine-grained access to intellectual content via public URIs, and re-usability as defined both by publication of machine reabable data and by publication under licenses that permit further copying of available materials. This collection presents a series of reports from participants in 2012 and 2013 sessions of the NEH-funded Linked Ancient World Data Institute. The contributors come from a wide range of academic disciplines and professional backgrounds. The projects they represent reflect this range and also illustrate many stages of the process of moving from concept to implementation, with a focus on results achieved by the mid 2013 to early 2014 timeframe.</div>
   
