--- a/isaw-papers-9/isaw-papers-9.xhtml
+++ b/isaw-papers-9/isaw-papers-9.xhtml
@@ -30,6 +30,7 @@
  <meta name="DCTERMS.license" content="Creative Commons Attribution 3.0 Unported (CC-BY)" />
  <meta name="DCTERMS.bibliographicCitation" content="P. Davoli and C. Miks. (2015). A New “Roman” Sword from Soknopaiou Nesos (El-Fayyum, Egypt). ISAW Papers, 9." />
  <meta name="DCTERMS.isPartOf" content="ISAW Papers" />
+  <meta name="DCTERMS.identifier.DOI" content="2333.1/c59zw6cw"/>
 
 </head>
 	
@@ -39,6 +40,8 @@
 <h2>ISAW Papers 9 (2015)</h2>
 <h1 property="dcterms:title">A New “Roman” Sword from Soknopaiou Nesos (El-Fayyum, Egypt)</h1>
 <h2><span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.org/viaf/32231858" property="foaf:name">Paola Davoli</a></span> and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.org/viaf/38117358" property="foaf:name">Christian Miks</a></span></h2>
+
+<p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/c59zw6cw">http://doi.org/2333.1/c59zw6cw</a></p>
 
 <p class="abstract"><em>Abstract:</em><span id="abstract" property="dcterms:abstract"> A long and well preserved sword was brought to light in 2006 during the archaeological excavations carried out by the Soknopaiou Nesos Project (University of Salento, Lecce) in the <i>temenos</i> of the main temple in Soknopaiou Nesos, modern Dime. The current state of research would suggest a classification as a Roman, or at least Roman influenced, weapon of the late Republican period. However, some peculiar elements of this sword seem to point to an oriental or Egyptian final assemblage. It thus may give a new impulse to the still open discussion about the appearance of Hellenistic swords starting from the period of Alexander's Successors. The weapon can have been used by soldiers of the late Ptolemaic period as well as by members of the Roman army. The question whether the sword ended up in the <i>temenos</i> as part of local defensive arms or as a votive object will largely remain speculative, as its find context is not stratigraphically reliable.</span></p>
 
