--- a/isaw-papers-13/isaw-papers-13.xhtml
+++ b/isaw-papers-13/isaw-papers-13.xhtml
@@ -20,16 +20,16 @@
  <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/" />
  
  <meta name="DC.title" content="" /> 
- <meta name="DC.date" content="2017" />
+ <meta name="DC.date" content="2018" />
  <meta name="DC.format" content="application/xhtml+xml" />
- <meta name="DC.creator" content="Dorian Greenbaum" />
- <meta name="DC.creator" content="Alexander Jones" />
+ <meta name="DC.creator" content="Daniel Hoyer" />
  <meta name="DC.language" content="en" /> 
  <meta name="DC.abstract" content=">This article describes a database of 50,970 coins from the Roman Empire minted in the 'high' imperial period (23 BCE-275 CE). It includes mainly coins found in the regions that were part of imperial Rome's African provinces, with some material from Western Europe for comparative purposes. This database represents data culled from numerous sources and previous publications, representing one of the largest single collections of numismatic material from Roman Africa during this period currently available; though it is by no means exhaustive, and further research is needed to supplement the present project. I present here an overview and some notes on the quantification of this material, highlighting the most prominent and interesting patterns. This quantification suggests certain interpretations concerning key topics in the monetary history of the western Empire, which I point to briefly. Further, the complete dataset is provided for download as csv file and a more structured data file (JSON file) to facilitate future research on Roman Africa's numismatic record as well as related information. My intention is, thus, both to advance the study of Africa's numismatic heritage in general as well as to contribute to the available corpus of accessible, digital information concerning the ancient world." />
  <meta name="DC.publisher" content="Institute for the Study of the Ancient World, New York University" />
- <meta name="DC.subject" content="" />
+ <meta name="DC.subject" content="Numismatics, Roman" />
+ <meta name="DC.subject" content="Economic History--to 500" />
  <meta name="DCTERMS.license" content="Creative Commons Attribution 4.0 Unported (CC-BY)" />
- <meta name="DCTERMS.bibliographicCitation" content="Daniel Hoyer. 2017. 'An Overview of the numismatic evidence from imperial Roman Africae' ISAW Papers, 13." />
+ <meta name="DCTERMS.bibliographicCitation" content="Daniel Hoyer. 2018. 'An Overview of the numismatic evidence from imperial Roman Africae' ISAW Papers, 13." />
  <meta name="DCTERMS.isPartOf" content="ISAW Papers" />
 
  <link rel="dcterms:isPartOf" href="http://www.worldcat.org/oclc/756047783" />
@@ -1258,9 +1258,9 @@
 <section id="footnotes">
 <h1>Notes</h1>
 
-<p class="footnote" id="footnote-1" rel="dcterms:hasPart" resource="#footnote-1"><sup><a href="#footnote-reference-1">1</a></sup>  Such projects include the American Numsimatic Societies' <i>Online Coins of the Roman Empire</i> project (<a href="http://numismatics.org/ocre/">http://numismatics.org/ocre/</a>); the The Europeana network of Ancient Greek and Latin Epigraph project (<a href="http://www.eagle-network.eu/">http://www.eagle-network.eu/</a>); the Pelagios Commons (<a href="http://commons.pelagios.org">http://commons.pelagios.org</a>); Pleiades (<a href="http://pleiades.stoa.org/">http://pleiades.stoa.org/</a>); Papyri.info (<a href="http://papyri.info/">http://papyri.info/</a>); Open Context (<a href="http://opencontext.org/">http://opencontext.org/</a>); and PeriodO (<a href="http://perio.do/">http://perio.do/</a>). See the excellent recent review of the linked data approach and its application to ancient historical research in this journal (Elliott, Heath, and Muccigrosso 2014). See also Neumann and Wallrodt (2017) for a compelling account of how geographic information systems software can be used in the study of ancient numismatics.</p>
+ <p class="footnote" id="footnote-1" rel="dcterms:hasPart" resource="#footnote-1"><sup><a href="#footnote-reference-1">1</a></sup>  Such projects include the American Numsimatic Societies' <i>Online Coins of the Roman Empire</i> project (<a href="http://numismatics.org/ocre/">http://numismatics.org/ocre/</a>); the The Europeana network of Ancient Greek and Latin Epigraph project (<a href="http://www.eagle-network.eu/">http://www.eagle-network.eu/</a>); the Pelagios Commons (<a href="http://commons.pelagios.org">http://commons.pelagios.org</a>); Pleiades (<a href="http://pleiades.stoa.org/">http://pleiades.stoa.org/</a>); Papyri.info (<a href="http://papyri.info/">http://papyri.info/</a>); Open Context (<a href="http://opencontext.org/">http://opencontext.org/</a>); and PeriodO (<a href="http://perio.do/">http://perio.do/</a>). See the excellent recent review of the linked data approach and its application to ancient historical research in this journal (Elliott, Heath, and Muccigrosso 2014). See also Neumann and Wallrodt (2017) for a compelling account of how geographic information systems software can be used in the study of ancient numismatics.</p>
 
-<p class="footnote" id="footnote-2" rel="dcterms:hasPart" resource="#footnote-2"><sup><a href="#footnote-reference-2">2</a></sup>  State spending is traditionally seen as the chief motivation behind minting in most models of Roman coinage. The foundational expositions of the argument are Finley 1973/1999: 166-9 along with Crawford 1975: 561-4 and a slightly modified version of the same basic notion in Hopkins 1980. For more recent treatments of the idea, see notably Howgego 1994: 14; Reece 1994: 255; Duncan-Jones 1994: 106-7; Fulford 1996: 156; Salama and Besombes 2000: 205; De Ligt 2992: 64-6; Van der Vin 2002: 168; Salama 2004: 35. I discuss and debate this traditional model in the interpretation section.</p>
+ <p class="footnote" id="footnote-2" rel="dcterms:hasPart" resource="#footnote-2"><sup><a href="#footnote-reference-2">2</a></sup>  State spending is traditionally seen as the chief motivation behind minting in most models of Roman coinage. The foundational expositions of the argument are Finley 1973/1999: 166-9 along with Crawford 1975: 561-4 and a slightly modified version of the same basic notion in Hopkins 1980. For more recent treatments of the idea, see notably Howgego 1994: 14; Reece 1994: 255; Duncan-Jones 1994: 106-7; Fulford 1996: 156; Salama and Besombes 2000: 205; De Ligt 2992: 64-6; Van der Vin 2002: 168; Salama 2004: 35. I discuss and debate this traditional model in the interpretation section.</p>
 
  <p class="footnote" id="footnote-3" rel="dcterms:hasPart" resource="#footnote-3"><sup><a href="#footnote-reference-3">3</a></sup>  One of the reasons I chose not to treat imitation coins here is that they are prominent in Gaul and Germany, particularly imitations of Gallic Empire <i>antoniniani </i>(see Bransbourg 2011: 106-7), but are far less frequent from Africa. On the preponderance of imitation coins in third century Gaul, see notably Hollard 1995: 1061-76; Estiot 1996: 36-52.</p>
 
@@ -1290,7 +1290,7 @@
 
  <p class="footnote" id="footnote-16" rel="dcterms:hasPart" resource="#footnote-16"><sup><a href="#footnote-reference-16">16</a></sup>  See Map showing location of find-spots of the African coins in the database.</p>
 
-<p class="footnote" id="footnote-17" rel="dcterms:hasPart" resource="#footnote-17"><sup><a href="#footnote-reference-17">17</a></sup> Callu 1969: 197; Lo Cascio 1984; Desnier 1985: 33; Hollard 1996: 209; Harl 1996: 128-9; Carrié 2007: 137-8; Bland 2012: 516-25</p>
+ <p class="footnote" id="footnote-17" rel="dcterms:hasPart" resource="#footnote-17"><sup><a href="#footnote-reference-17">17</a></sup> Callu 1969: 197; Lo Cascio 1984; Desnier 1985: 33; Hollard 1996: 209; Harl 1996: 128-9; Carrié 2007: 137-8; Bland 2012: 516-25</p>
 
  <p class="footnote" id="footnote-18" rel="dcterms:hasPart" resource="#footnote-18"><sup><a href="#footnote-reference-18">18</a></sup>  This is, however, contentious. For a very useful recent summary of the debate, see Bland 2012.</p>
 
