--- a/isaw-papers-3/isaw-papers-3.xhtml
+++ b/isaw-papers-3/isaw-papers-3.xhtml
@@ -16,7 +16,7 @@
  skos: http://www.w3.org/2004/02/skos/core#
  "
  >  
-
+<head>
  <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
  <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/" />
  <meta name="DC.title" content="Rome and the Economic Integration of Empire" /> 
@@ -33,7 +33,7 @@
  <meta name="DC.subject" content="Economic history--To 500" />
  <meta name="DCTERMS.identifier.DOI" content="2333.1/280gb73f"/>
         
-<head>
+
   <title>Gilles Bransbourg. "Rome and the Economic Integration of Empire" ISAW Papers 3. (2012).</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="canonical" href="http://dlib.nyu.edu/awdl/isaw/isaw-papers/3/"/>
@@ -177,7 +177,8 @@
 
 <p id="p10">This leads to the following chart between prices differentials and distances from Rome:<a class="endnotereference" id="endnoteref14" href="#endnote14"><sup>14</sup></a></p>
 
-<figure id="p11"><img id="chart01" alt="" src="images/chart01.png" />
+<figure id="chart01">
+ <img id="p11" alt="" width="600px" src="images/chart01.png" />
 <figcaption id="p12">Chart 1. Distances from Rome and price for grain</figcaption>
 </figure>
 
@@ -293,8 +294,10 @@
 
 <p id="p46">Let us now focus on the other factor: distance to Rome. The authors, aware that land and river transportation are more expensive than sea transportation, ran their equation with and without the Po valley observation.<a class="endnotereference" id="endnoteref48" href="#endnote48"><sup>48</sup></a> The risk taken here was not big, since that variable nearly fits with the straight line, which means that its removal was unlikely to significantly alter the coefficients. What is more surprising is the way the Lusitania parameter was incorporated. The distance used by Kessler and Temin is exactly the mileage from Madrid to Rome, as can be found on an airline website. Since ancient Romans could not fly, and Madrid is not located in Portugal, it is more relevant to use sea distances instead. The shortest seaborne itinerary between the Douro River mouth and Civitavecchia accounts for 1334 nautical miles, that is 2470 km, and not 1363 km.<a class="endnotereference" id="endnoteref49" href="#endnote49"><sup>49</sup></a> Once that fact is introduced, the price differentials are visibly no longer aligned according to distance to Rome. The equation again becomes very weak to a point of near irrelevance, even by using the original prices as selected by Kessler and Temin.</p>
 
-<p id="p47" class="figure"><img id="chart02" alt="" width="600" src="images/chart02.png" /></p>
-<p id="p48" class="figure_title">Chart 2. Distances from Rome with Lusitania amended, and price for grain</p>
+<figure id="chart02">
+ <img id="p47" alt="" width="600" src="images/chart02.png" />
+ <figcaption id="p48">Chart 2. Distances from Rome with Lusitania amended, and price for grain</figcaption>
+</figure>
 
 <h3>Could landlocked areas trade?</h3>
 
