13 doi/some 12 table ids

--- a/isaw-papers-12/isaw-papers-12.xhtml
+++ b/isaw-papers-12/isaw-papers-12.xhtml
@@ -1790,7 +1790,7 @@
 
 <p id="p73">The papyrus preserves complete statements of the longitudes of Jupiter, Mars, Venus, Mercury, the ascendant, and the ascending and descending nodes. Saturn’s zodiacal sign can be deduced to be Aries, which together with Scorpio has Mars as its house ruler and which is the exaltation of the Sun and depression of Saturn. The Moon must be within a few degrees of its mean longitude, given as Cancer 24° 3', and the Sun within thirty degrees of Mercury and within sixty degrees of Venus, say between Scorpio 15° and Sagittarius 30°. Hence we have the following “low precision” data for establishing the date of the horoscope:</p>
 
-<table>
+<table id="table-after-p73">
 <tr>
  <td>Saturn</td>
  <td>Aries</td>
@@ -1854,7 +1854,7 @@
 
 <p id="p81" class="margintop15em">This gives us the elongation of the Moon from the Sun, (λ<sub>☾</sub> – λ<sub>☉</sub>), as 241° 22', while incidentally securing the uncertainly read numeral for the degrees of the Lot of Fortune. According to the <i>Almagest</i> theories, this elongation was attained, to the nearest equinoctial hour, on November 19 at about two equinoctial hours after midnight for the meridian of Alexandria. For this date and time, we compare data computed by the theories of the <i>Almagest</i> with the papyrus (Table 1).</p>
 
-<table>
+<table id="table1">
 <caption style="caption-side:bottom">Table 1. Astronomical data computed from Ptolemy’s <i>Almagest</i> for 319 CE, November 19, 2 equinoctial hours after midnight (meridian of Alexandria, mean time according to the Era Nabonassar) compared with data from P.Berl. 9825.</caption>
 
 <tr>
@@ -1946,7 +1946,7 @@
 
 <p id="p89">With an approximate value for the Sun’s longitude, we can use the ascendant to get a more accurate estimate of the time of the nativity as well as the terrestrial latitude for which the horoscope was computed, on the hypotheses that the time was a whole number of seasonal hours past sunset and that trigonometrical tables comparable to Ptolemy’s were used to determine the cardines. For a chosen latitude, we find the oblique ascensions of the ascendant (ρ<sub>H</sub>) and of the point diametrically opposite the Sun (ρ<sub>180°–</sub><sub>☉</sub>) as well as the number of degrees of ascension corresponding to one seasonal hour of night (χ). The ascensional difference divided by χ gives the number of seasonal hours past midnight corresponding to the ascendant for the chosen latitude; if it is close to an integer, this is likely to be the correct latitude.</p>
 
-<table>
+<table id="table2">
 
 <caption style="caption-side:bottom">Table 2. Time in seasonal hours corresponding to the known longitudes of the ascendant and Sun for principal latitudes of Ptolemy’s geographical system.</caption>
 
@@ -2203,7 +2203,7 @@
 
 <p id="p93" class="textindent0">For purposes of comparison with modern theory, we assume (disregarding the effect of the equation of time) that times according to our horoscope as well as according to the <i>Almagest</i> theories are two equinoctial hours later than UT. The time of the nativity derived above is approximately 1.1 equinoctial hours past midnight, and the horoscope’s time for the preceding full Moon is approximately 0.9 equinoctial hours past noon. The longitudinal data present in the papyrus or securely restored are compared below with computations for the same dates and times according to the <i>Almagest</i> and according to the modern theory.<sup><a class="footnote-reference" id="footnote-reference-12" href="#footnote-12">12</a></sup> The errors with respect to the JPL figures are in parentheses.</p>
 
-<table>
+<table id="table4">
 
 <caption style="caption-side: bottom">Table 4. Comparison of papyrus horoscope with data from Ptolemy’s <i>Almagest</i> and modern theory (JPL Horizons ephemeris).</caption>
 
@@ -2324,7 +2324,7 @@
 
 <p id="p104">The latitudes and trends (represented by arrows, up meaning northward) ascribed to the planets in the horoscope are summarized below, with comparisons from Ptolemy’s <i>Almagest</i> and <i>Handy Tables</i> and from modern theory.</p>
 
-<table>
+<table id="table5">
 
 <caption style="caption-side: bottom">Table 5. Latitudinal data for planets from papyrus horoscope and Ptolemy’s <i>Almagest</i> compared.</caption>
 
@@ -2698,7 +2698,7 @@
 
 <p id="p168">Table 7 provides an easy-to-see comparison between the technical data of our horoscope and those with which it has been compared in the previous paragraphs.</p>
 
-<table>
+<table id="table7">
 
  <caption style="caption-side: bottom">Table 7. Technical Data in P.Berl. 9825 Compared to Other Elaborate Horoscopes.</caption>
  <colgroup><col style="width:175px"/>
