--- a/isaw-papers-13/isaw-papers-13.xhtml
+++ b/isaw-papers-13/isaw-papers-13.xhtml
@@ -31,6 +31,8 @@
  <meta name="DCTERMS.license" content="Creative Commons Attribution 4.0 Unported (CC-BY)" />
  <meta name="DCTERMS.bibliographicCitation" content="Daniel Hoyer. 2018. 'An Overview of the numismatic evidence from imperial Roman Africae' ISAW Papers, 13." />
  <meta name="DCTERMS.isPartOf" content="ISAW Papers" />
+ <meta name="DCTERMS.identifier.DOI" content="2333.1/76hdrfz3"/>
+
 
  <link rel="dcterms:isPartOf" href="http://www.worldcat.org/oclc/756047783" />
  <link rel="dcterms:isPartOf" href="urn:issn:2164-1471" />
@@ -45,11 +47,13 @@
 <header>
  <h2>ISAW Papers 13 (2018)</h2>
  
- <h1 rel="dcterms:title">An Overview of The Numismatic Evidence from Imperial Roman Africa</h1>
+ <h1 rel="dcterms:title">An Overview of the Numismatic Evidence from Imperial Roman Africa</h1>
  
  <p style="text-align:center">by</p>
  
  <h2><span rel="dcterms:creator"><a rel="dcterms:identifier" href="https://orcid.org/0000-0003-2675-257X" property="foaf:name">Daniel Hoyer</a></span></h2>
+ 
+ <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/76hdrfz3">http://doi.org/2333.1/76hdrfz3</a></p>
  
  <p class="abstract"><em>Abstract: </em><span id="abstract" property="dcterms:abstract">This article describes a database of 50,970 coins from the Roman Empire minted in the 'high' imperial period (23 BCE-275 CE). It includes mainly coins found in the regions that were part of imperial Rome's African provinces, with some material from Western Europe for comparative purposes. This database represents data culled from numerous sources and previous publications, representing one of the largest single collections of numismatic material from Roman Africa during this period currently available; though it is by no means exhaustive, and further research is needed to supplement the present project. I present here an overview and some notes on the quantification of this material, highlighting the most prominent and interesting patterns. This quantification suggests certain interpretations concerning key topics in the monetary history of the western Empire, which I point to briefly. Further, the complete dataset is provided for download as both a csv file and a more structured data file (JSON file) to facilitate future research on Roman Africa's numismatic record as well as related information. My intention is, thus, both to advance the study of Africa's numismatic heritage in general as well as to contribute to the available corpus of accessible, digital information concerning the ancient world.</span></p>
  
