isaw-publication.css as the CSS file for all articles

--- a/isaw-papers-1/isaw-papers-1.xhtml
+++ b/isaw-papers-1/isaw-papers-1.xhtml
@@ -48,7 +48,7 @@
  <link rel="dcterms:isPartOf" href="http://isaw.nyu.edu/publications/isaw-papers" />
 
 
- <link rel="stylesheet" href="isaw-papers.css" />
+ <link rel="stylesheet" href="isaw-publications.css" />
 
  <style type="text/css">
  <![CDATA[
@@ -91,14 +91,14 @@
 
 <body xml:lang="en" typeof="dcmitype:Text">
 
-<div id="front">
- <h1><span rel="dcterms:isPartOf" resource="http://isaw.nyu.edu/publications/isaw-papers">ISAW Papers</span> 1 (2011)</h1>
+<header>
+ <h2><span rel="dcterms:isPartOf" resource="http://isaw.nyu.edu/publications/isaw-papers">ISAW Papers</span> 1 (2011)</h2>
 <h1 property="dcterms:title">A New Discovery of a Component of Greek Astrology in Babylonian Tablets: The “Terms”</h1>
 
- <h1><span property="dcterms:creator cc:attributionName">Alexander Jones</span><a class="endnotereference"
+ <h2><span property="dcterms:creator cc:attributionName">Alexander Jones</span><a class="endnotereference"
   href="#endnote1" id="endnoteref1" ><sup>1</sup></a>
   and <span property="dcterms:creator cc:attributionName">John M. Steele</span><a class="endnotereference" href="#endnote2" id="endnoteref2" ><sup>2</sup></a>
- </h1>
+ </h2>
  
  <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/k98sf96r">http://doi.org/2333.1/k98sf96r</a></p>
  
@@ -116,7 +116,7 @@
  </ol>
 </div>
  
-</div>
+</header>
  
  <div id="body">
 <div class="section" id="section0">
