--- a/isaw-papers-10/isaw-papers-10.xhtml
+++ b/isaw-papers-10/isaw-papers-10.xhtml
@@ -14,7 +14,7 @@
  ">
 <head>
 <title>S. Heath, J.L. Rife, J.J. Bravo III, and G. Blasdel. (2015). Preliminary Report on Early Byzantine Pottery from a Building Complex at Kenchreai (Greece). ISAW Papers, 10.</title>
-<link rel="stylesheet" href="isaw-papers.css"/>
+<link rel="stylesheet" href="isaw-publications.css"/>
 
 
  <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
