--- a/isaw-papers-2/isaw-papers-2.xhtml
+++ b/isaw-papers-2/isaw-papers-2.xhtml
@@ -33,13 +33,13 @@
   <meta name="DCTERMS.identifier.DOI" content="2333.1/9s4mw84w"/>
   
 
-  <link rel="stylesheet" href="isaw-papers.css"/>
+  <link rel="stylesheet" href="isaw-publications.css"/>
   <style type="text/css">
     li.work_cited { text-indent:0 }
   </style>
 </head>
 <body>
-<div id="front">
+<header>
 <h1><span rel="dcterms:isPartOf" resource="http://isaw.nyu.edu/publications/isaw-papers">ISAW Papers</span> 2 (2012)</h1>
 <h1 property="dcterms:title">Review of Ptolemaic Numismatics, 1996 to 2007</h1>
 <h1><span property="dcterms:creator">Catharine Lorber</span> and <span property="dcterms:creator">Andrew Meadows</span></h1>
@@ -87,7 +87,7 @@
     <li><a href="#section12">Titles Cited</a></li>
   </ul>
 </div>
-</div>
+</header>
   <div id="body">
   <div class="section" id="section1">
 <h2>Introduction</h2>
