--- a/isaw-papers-4/isaw-papers-4.xhtml
+++ b/isaw-papers-4/isaw-papers-4.xhtml
@@ -45,21 +45,21 @@
  <link rel="dcterms:isPartOf" href="urn:issn:2164-1471" />
  <link rel="dcterms:isPartOf" href="http://isaw.nyu.edu/publications/isaw-papers" />
  
-<link rel="stylesheet" href="isaw-papers.css"/>
+<link rel="stylesheet" href="isaw-publications.css"/>
 
 </head>
 
 <body>
  
 <article>
-<header id="front">
+<header>
 
 <h2>ISAW Papers 4 (February, 2012)</h2>
 
 <h1 property="dcterms:title">The Cosmos in the Antikythera Mechanism</h1>
 
-<h1><span property="dcterms:creator">Tony Freeth</span><sup><a class="endnoteref" id="endnoteref1" href="#endnote1">1</a></sup>
-and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.org/viaf/66498387">Alexander Jones</a></span><sup><a class="endnoteref" id="endnoteref2" href="#endnote2">2</a></sup></h1>
+<h2><span property="dcterms:creator">Tony Freeth</span><sup><a class="endnoteref" id="endnoteref1" href="#endnote1">1</a></sup>
+and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.org/viaf/66498387">Alexander Jones</a></span><sup><a class="endnoteref" id="endnoteref2" href="#endnote2">2</a></sup></h2>
 
  <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/xgxd26r7">http://doi.org/2333.1/xgxd26r7</a></p>
   
