--- a/isaw-papers-5/isaw-papers-5.xhtml
+++ b/isaw-papers-5/isaw-papers-5.xhtml
@@ -15,10 +15,10 @@
 </head>
 <body>
 
-<div id="front">
- <h1>ISAW Papers 5 (2012)</h1>
+<header>
+ <h2>ISAW Papers 5 (2012)</h2>
  <h1 property="dcterms:title">A Syriac Fragment from <i>The Cause of All Causes</i> on the Pillars of Hercules</h1>
- <h1 property="dcterms:creator">Adam C. McCollum</h1>
+ <h2 property="dcterms:creator">Adam C. McCollum</h2>
 
  <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/j9kd5302">http://doi.org/2333.1/j9kd5302</a></p>
 
@@ -26,7 +26,7 @@
  
  <div id="subjects"><em>Subjects:</em> <a class="subject" rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh85080773" property="dcterms:subject">Manuscripts, Syriac</a>; <a class="subject" rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh85054012">Geography, Ancient</a>.</div>
  
-</div>
+</header>
  
 
 <div id="body">
