--- a/isaw-papers-7/isaw-papers-7.xhtml
+++ b/isaw-papers-7/isaw-papers-7.xhtml
@@ -23,7 +23,7 @@
  <title>Current Practice in Linked Open Data for the Ancient World</title>
 
  <meta name="DCTERMS.identifier.DOI" content="2333.1/gxd256w7"/>
- <link rel="stylesheet" href="isaw-papers-7.css" />
+ <link rel="stylesheet" href="isaw-publications.css" />
  <link rel="canonical" href="http://dlib.nyu.edu/awdl/isaw/isaw-papers/7/" />
  <link rel="dcterms:isPartOf" href="http://isaw.nyu.edu/publications/isaw-papers" />
 </head>
