--- a/isaw-papers-8/isaw-papers-8.xhtml
+++ b/isaw-papers-8/isaw-papers-8.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" prefix=" bibo: http://purl.org/ontology/bibo/ cc: http://creativecommons.org/ns# dcmitype: http://purl.org/dc/dcmitype/ dcterms: http://purl.org/dc/terms/ foaf: http://xmlns.com/foaf/0.1/ lawd: http://lawd.info/ontology/ nm: http://nomisma.org/id/ owl:  http://www.w3.org/2002/07/owl# rdfs: http://www.w3.org/2000/01/rdf-schema# rdfa: http://www.w3.org/ns/rdfa# rdf:  http://www.w3.org/1999/02/22-rdf-syntax-ns# skos: http://www.w3.org/2004/02/skos/core#">
 <head>
-<link rel="stylesheet" href="isaw-papers.css"/>
+<link rel="stylesheet" href="isaw-publications.css"/>
 <title property="dcterms:bibliographicCitation">Federico De Romanis (2014). Ivory from Muziris. ISAW Papers, 8.</title>
 <link rel="dcterms:creator" href="http://viaf.org/viaf/92821505"/>
 
@@ -173,7 +173,7 @@ Gopakumar)</figcaption>
 
 <figure id="figure10">
 <img src="images/figure10.png" />
-<figcaption>Figuere 10. Tabula Peutingeriana portion of Seg. XI as reproduced by K. Miller in 1887/8.</figcaption>
+<figcaption>Figure 10. Tabula Peutingeriana portion of Seg. XI as reproduced by K. Miller in 1887/8.</figcaption>
 </figure>
 
 <p id="p27" rel="dcterms:hasPart" resource="#p27">In ancient India, captive male elephants with big tusks<a class="footnote-reference" id="footnote-reference-54" href="#footnote-54"><sup>54</sup></a> are a prerogative of the highest political authorities, and essential to their military strength. According to Megasthenes, only the king has the right to own horses and elephants,<a class="footnote-reference" id="footnote-reference-55" href="#footnote-55"><sup>55</sup></a> and in the <i>Arthaśāstra</i>’s words the ‘king’s victory is mainly a matter of elephants.’<a class="footnote-reference" id="footnote-reference-56" href="#footnote-56"><sup>56</sup></a> In the theory laid down by the <i>Tolkāppiyam</i>, the possession of war elephants<a class="footnote-reference" id="footnote-reference-57" href="#footnote-57"><sup>57</sup></a> is a distinctive feature of the <i>aracar</i>.<a class="footnote-reference" id="footnote-reference-58" href="#footnote-58"><sup>58</sup></a> It is likely that the term, a Tamilization of Skt. <i>rājan-</i>,<a class="footnote-reference" id="footnote-reference-59" href="#footnote-59"><sup>59</sup></a> is meant to be inclusive of both <i>vēntar</i>, “kings” of the highest rank, and <i>vēḷir</i>, somewhat high dignitaries or more or less dependent chieftains.<a class="footnote-reference" id="footnote-reference-60" href="#footnote-60"><sup>60</sup></a> At any rate, in <i>Caṅkam</i> literature many <i>vēḷir</i> are said to have (or to donate) captive elephants.<a class="footnote-reference" id="footnote-reference-61" href="#footnote-61"><sup>61</sup></a> On the other hand, it is reasonable to assume that the regional pre-eminence of the <i>mūvēntar</i>—the three major powers of the Cērar, Pāṇṭiyar, and Co<u>l</u>ar—was backed by the ownership of a higher number of war elephants. It will suffice here to quote a few lines in praise of the Cēra king Celvakkaṭuṅkōv Āḻiyātaṉ:</p>
