--- a/isaw-papers-9/isaw-papers-9.xhtml
+++ b/isaw-papers-9/isaw-papers-9.xhtml
@@ -15,7 +15,7 @@
  ">
 <head>
 <title>P. Davoli and C. Miks. (2015). A New “Roman” Sword from Soknopaiou Nesos (El-Fayyum, Egypt). ISAW Papers, 9.</title>
-<link rel="stylesheet" href="isaw-papers.css"/>
+<link rel="stylesheet" href="isaw-publications.css"/>
 
 <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
  <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/" />
