correction of a typo

--- a/isaw-papers-10/isaw-papers-10.xhtml
+++ b/isaw-papers-10/isaw-papers-10.xhtml
@@ -126,7 +126,7 @@
 
 <figure id="figure04">
 <img src="images/figure04.png" alt="" />
-<figcaption>Fig. 4: Quantification of 501 Late Roman Amphora 1, 2, 3, 4 and 5 rims</figcaption>
+<figcaption>Figure. 4: Quantification of 501 Late Roman Amphora 1, 2, 3, 4 and 5 rims</figcaption>
 </figure>
 
 <table id="table1" style="width:80%;margin-left:auto;margin-right:auto; margin-bottom:2em">
